centered title and navbar, fixed collapse issues

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ nav {}
 } */
 
 .content {
-  padding-top: 100px;
+  padding-top: 130px;
 }
 
 /* footer {
@@ -41,3 +41,21 @@ nav {}
   /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+#navbarSupportedContent1 {
+  margin-right: 20px;
+}
+
+#navbarTitle {
+  margin-right: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+#toggleButton {
+  margin: 15px;
+}
+
+/* #navbarRow {
+
+} */
